# rags_alg_side

./: CMakeLists.txt  package.xml
graphs/: aStarPath0.txt  testmap.txt
launch/: rags_alg_side.launch  rags_alg_side_aStar.launch
script/: aStar.py  rags.py  rags_alg_side.py
