<?xml version="1.0"?>
<package>
  <name>rags_alg_side</name>
  <version>0.0.0</version>
  <description>The rags_alg_side package</description>

  <maintainer email="smithan7@oregonstate.edu">Andrew Smith</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>roscpp</run_depend>



  <export>


  </export>
</package>
